--- a/report/project_report.tex
+++ b/report/project_report.tex
@@ -6,9 +6,9 @@
 \usepackage{microtype}
 \usepackage{hyperref}
 \usepackage{graphicx}
-\usepackage[space]{grffile}      % allow spaces in file names for \includegraphics
-\usepackage{xstring}             % string tests for filename-based sizing
-\usepackage{siunitx}             % for \SI{..}{MB} etc.
+\usepackage[space]{grffile}
+\usepackage{xstring}
+\usepackage{siunitx}
 \usepackage{caption}
 \captionsetup{font=small}
 \usepackage{setspace}
@@ -23,6 +23,8 @@
 \usepackage{minted}
 \usepackage{siunitx}
 \usepackage{graphicx}
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta, positioning}
 \usepackage[space]{grffile}
 
 \newcommand{\locustwide}[1]{\includegraphics[width=.55\linewidth]{#1}}
@@ -109,37 +111,59 @@
 \vspace{-1.5em}
 
 \section{Introduction}
-The proliferation of unstructured textual data across digital platforms has precipitated a growing demand for efficient and scalable information extraction techniques. Named Entity Recognition (NER), a fundamental subtask within Natural Language Processing (NLP), serves as a critical enabling technology for this purpose, tasked with identifying and classifying atomic elements in text into predefined categories such as persons, organizations, and locations. The operationalization of such NLP models, however, traditionally necessitates managing server infrastructure, which introduces complexity, overhead, and potential underutilization of resources.
+This work explores the application of a production-ready NLP pipeline for Named Entity Recognition (NER) on AWS Lambda. By leveraging AWS Lambda and Amazon API Gateway, we architect a microservice that is inherently scalable. The implementation utilizes the spaCy library, whilst the entire application stack—including compute, API management, and security—is defined and deployed using the AWS Serverless Application Model (SAM).
 
-This work explores the application of a serverless computing paradigm to address these challenges, deploying a production-ready NLP pipeline for NER on AWS Lambda. By leveraging AWS Lambda and Amazon API Gateway, we architect a microservice that is inherently scalable, cost-efficient, and devoid of server management concerns. The implementation utilizes the spaCy library, a robust industrial-strength framework for NLP in Python, ensuring high-quality inference capabilities. The entire application stack—including compute, API management, and security—is defined and deployed programmatically using the AWS Serverless Application Model (SAM), embodying Infrastructure-as-Code (IaC) principles to guarantee reproducibility and reliability.
-
-The primary objective of this study is to design, implement, and rigorously evaluate the performance characteristics of this serverless NER service under varied load conditions. We employ Locust, an open-source load-testing tool, to simulate traffic patterns ranging from benign to stressful, measuring key client-side and provider-side metrics. Our analysis focuses on quantifying latency, throughput, stability, and the impact of vertical scaling (memory allocation) within the constraints of an educational AWS environment. The findings demonstrate the viability of serverless architectures for deploying lightweight, performant, and cost-effective NLP microservices.
+The primary objective of this study is to design and evaluate the performance characteristics of this service under varied load conditions. We employ Locust, an open-source load-testing tool, to simulate traffic patterns. The findings confirm the viability of serverless architectures for deploying microservices.
 
 \section{Background}
 
 \subsection{Named Entity Recognition (NER) and spaCy}
-Named Entity Recognition (NER) is a natural language processing (NLP) task focused on identifying and categorizing information elements, known as entities, within unstructured text. These entities are typically classified into predefined categories such as persons (\textsf{PERSON}), organizations (\textsf{ORG}), and geopolitical entities (\textsf{GPE}). The spaCy library in Python provides a production-ready framework for implementing NLP pipelines, offering statistical models for tasks like NER.
+NER is a NLP task focused on identifying and categorizing information elements, known as entities, within unstructured text. These entities are typically classified into predefined categories such as persons (\textsf{PERSON}), organizations (\textsf{ORG}), and geopolitical entities (\textsf{GPE}). The spaCy library in Python provides a framework for implementing NLP pipelines, offering statistical models for tasks like NER.
 
 \subsection{AWS SAM \& Containerized Build with Docker}
-The AWS Serverless Application Model (SAM) is an open-source framework that extends AWS CloudFormation to provide a simplified syntax for defining serverless resources. It is a form of Infrastructure as Code (IaC) specifically designed to express the functions, APIs, permissions, and events that compose a serverless application. A containerized build process involves using a consistent, isolated environment to compile application dependencies and package the code. By employing Docker, SAM ensures that the build process is executed within a containerized environment that replicates the AWS Lambda runtime. This guarantees consistency between the development build and the deployment target, thereby mitigating compatibility issues.
+The AWS Serverless Application Model (SAM) is an open-source framework that extends AWS CloudFormation to provide a simplified syntax for defining serverless resources. It is a form of Infrastructure as Code (IaC) specifically designed to express the functions, APIs, permissions, and events that compose a serverless application. A containerized build process involves using an isolated environment to compile application dependencies and package the code. By employing Docker, in our case, SAM ensures that the build process is executed within a containerized environment that replicates the AWS Lambda runtime. This guarantees consistency between the development build and the deployment target, thereby mitigating compatibility issues.
 
 \subsection{AWS Lambda and HTTP API}
-AWS Lambda is a serverless, event-driven compute service that allows for the execution of code in response to triggers without requiring the management of underlying servers. It automatically scales with incoming request volume and utilizes a fine-grained cost model based on actual compute consumption. The Amazon API Gateway is a fully managed service that simplifies the creation, publication, and maintenance of secure APIs at any scale. It acts as a front-door for applications to access data and business logic from backend services, providing essential features like HTTP endpoint management, request routing, and authorization.
+AWS Lambda is a serverless, event-driven compute service that allows for the execution of code in response to triggers without requiring the management of underlying servers. It automatically scales with incoming request volume and utilizes a fine-grained cost model based on actual compute consumption. The Amazon API Gateway is a fully managed service that simplifies the deployment of APIs at any scale.
 
 \subsection{Observability with CloudWatch}
-Observability is a system property that describes how well internal states can be understood from external outputs, primarily through the collection and analysis of logs, metrics, and traces. Amazon CloudWatch is a monitoring and observability service that provides a unified view of AWS resource health, application performance, and operational trends. It automatically collects performance metrics from services like AWS Lambda.
+Observability is a system property that describes how well internal states can be understood from external outputs, primarily through the collection and analysis of logs, metrics, and traces. Amazon CloudWatch is a monitoring and observability service that provides a unified view of AWS resources. It automatically collects performance metrics from services like AWS Lambda.
 
 \subsection{Load Testing with Locust}
 Locust is an open-source load testing tool that allows developers to define user behavior with Python code and simulate various concurrent users to assess a system's performance under stress. Its distributed and scalable nature makes it suitable for testing the limits of web services and APIs. It provides a real-time web-based user interface to visualize performance indicators such as requests per second, response times, and the number of failing requests as the test is running.
 
 \section{System Design and Implementation}
-\subsection{Architecture overview}
-\begin{itemize}[leftmargin=1.3em]
-  \item \textbf{Client} sends \texttt{POST /ner} with a short text body.
-  \item \textbf{API Gateway (HTTP API)} forwards requests to Lambda.
-  \item \textbf{Lambda} parses input, runs spaCy NER (warm model), and returns spans.
-  \item \textbf{CloudWatch} records metrics and logs for observability.
-\end{itemize}
+\begin{figure}[h]
+\centering
+\begin{tikzpicture}[
+    node distance=2cm,
+    every node/.style={align=center, font=\small},
+    box/.style={rectangle, draw, rounded corners, minimum width=3cm, minimum height=1cm, fill=gray!10},
+    arrow/.style={-Latex, thick}
+]
+
+% Nodes
+\node[box] (user) {User \\ (Browser)};
+\node[box, right=of user] (frontend) {Front-End \\ (Static HTML + JS)};
+\node[box, right=of frontend] (apigw) {AWS API Gateway};
+\node[box, below=of apigw] (lambda) {AWS Lambda \\ (NER with spaCy)};
+\node[box, left=of lambda] (response) {JSON Response};
+
+% Arrows
+\draw[arrow] (user) -- (frontend) node[midway, above] {input text};
+\draw[arrow] (frontend) -- (apigw) node[midway, above] {HTTP POST};
+\draw[arrow] (apigw) -- (lambda) node[midway, right] {invoke};
+\draw[arrow] (lambda) -- (apigw) node[midway, right] {output};
+\draw[arrow] (apigw) -- (frontend);
+\draw[arrow] (frontend) -- (user) node[midway, below] {display entities};
+
+% Optional response box
+\draw[arrow, dashed] (lambda.west) -- (response.east);
+
+\end{tikzpicture}
+\caption{System architecture of the NER Lambda application.}
+\end{figure}
+
 
 \noindent\textbf{API contract.}
 \begin{minted}[
@@ -399,7 +423,6 @@ Locust shows a clean rise to a sustained throughput of \(\sim\)60--70~RPS with z
 
 \section{Limitations and Future Work}
 
-
 \section{Conclusion}\label{sec:conclusion}
 
 We evaluated a serverless NER API on AWS Lambda behind API Gateway using three canonical workload shapes (A: bursty, B: ramp–steady–ramp, C: spike), each in \emph{Light} and \emph{Heavy} variants, plus targeted vertical scaling experiments. Tests followed the guidance in the performance-evaluation lecture: a short warm-up (WU) to amortize cold starts; a main measurement window with stable load; and both user-facing (Locust) and provider-facing (CloudWatch) metrics. Additional very-heavy scenario ``hhA'' (40 users, low pacing) was executed with a shortened 3-minute plan to probe headroom while staying within budget.
@@ -422,21 +445,6 @@ Shorter runs (WU 30--60\,s; 2--5\,min main window) and reuse of the same stack k
 \paragraph{Overall.}
 Within the tested limits, the architecture \emph{scales accordingly and efficiently}: throughput increases with client concurrency, latency remains controlled and predictable after warm-up, and vertical scaling via memory provides a clear performance uplift when needed. The system shows no anomalous behavior under bursty, ramped, or spiky demand, and maintains zero-failure operation at the highest tested loads (hhA).
 
-
-\section*{Reproducibility \& Repository Notes}
-The repository is organized for ``clone $\rightarrow$ run'' on Windows:
-\begin{enumerate}[leftmargin=1.3em]
-  \item Install Python 3.10+, Docker Desktop, AWS CLI v2, AWS SAM CLI.
-  \item \texttt{python -m venv .venv; . .\textbackslash .venv\textbackslash Scripts\textbackslash Activate.ps1}
-  \item \texttt{pip install -r requirements.txt}
-  \item \texttt{sam build --use-container}
-  \item \texttt{sam deploy --guided --profile learnerlab}
-  \item Use \texttt{scripts/smoke.ps1} to POST \texttt{/ner}.
-  \item Tear down with \texttt{scripts/delete.ps1}.
-\end{enumerate}
-
-\section*{Ethical, Cost, and Budget Considerations}
-We designed for negligible standing cost and minimal environmental impact: no always-on compute, small artifacts, and conservative logs. Load tests remain moderate to avoid unintended denial-of-service behavior and unnecessary spend.
 
 \begin{thebibliography}{9}
 \bibitem{spacy}
